fix(home): correct minor margin misalignment

--- a/copticroot/src/styles/Home.css
+++ b/copticroot/src/styles/Home.css
@@ -55,6 +55,7 @@
 .hero-text-block {
     display: flex;
     flex-direction: column;
+    margin-left: -5px;
 }
 
 .line-wrapper {
